Add EU addresses CSV and update usage example
- Created a new CSV file `eu_addresses.csv` containing various European addresses with postal codes, cities, and country codes.
- Modified `usage.ipynb` to change the execution count to null and updated the loop to iterate 10 times with a different email type.
- Updated `graph.py` to load environment variables using `dotenv`.
- Refactored `nodes.py` to use an environment variable for the Google Cloud project and changed the email invocation method to asynchronous.
- Changed `main.py` to support asynchronous execution and updated the email sending logic accordingly.

--- a/examples/usage.ipynb
+++ b/examples/usage.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26,18 +26,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1:\n",
-      "{'recipients': ['vectrans-demo@vectrixbe.onmicrosoft.com'], 'email': '\\n<!DOCTYPE html>\\n<html>\\n<head>\\n  <style>\\n    body {\\n      font-family: Arial, sans-serif;\\n      line-height: 1.6;\\n      color: #333;\\n    }\\n    .container {\\n      width: 80%;\\n      margin: 0 auto;\\n      padding: 20px;\\n      border: 1px solid #ddd;\\n      border-radius: 5px;\\n    }\\n    .header {\\n      background-color: #f4f4f4;\\n      padding: 10px;\\n      text-align: center;\\n      font-size: 24px;\\n      font-weight: bold;\\n    }\\n    .content {\\n      padding: 20px 0;\\n    }\\n    .cta-button {\\n      display: inline-block;\\n      background-color: #007bff;\\n      color: #ffffff;\\n      padding: 10px 20px;\\n      text-decoration: none;\\n      border-radius: 5px;\\n      font-weight: bold;\\n    }\\n    .validity {\\n      font-style: italic;\\n      color: #555;\\n      margin-top: 20px;\\n    }\\n    .signature {\\n      margin-top: 30px;\\n      line-height: 1.4;\\n    }\\n  </style>\\n</head>\\n<body>\\n  <div class=\"container\">\\n    <p>Beste gewaardeerde klant,</p>\\n    <div class=\"content\">\\n      <p>Bent u klaar om uw logistieke kosten te verlagen? Profiteer nu van onze exclusieve aanbieding!</p>\\n      <h2>Speciale Korting op Internationaal Transport</h2>\\n      <p>Voor een beperkte tijd bieden wij u <strong>15% korting op alle internationale zendingen van meer dan 1000 km</strong>. Dit is de perfecte gelegenheid om te besparen op uw langeafstandstransport zonder in te leveren op kwaliteit en betrouwbaarheid.</p>\\n      <h3>Uw voordeel:</h3>\\n      <ul>\\n        <li><strong>15% directe besparing</strong> op transportkosten voor lange afstanden.</li>\\n        <li>De vertrouwde en efficiënte service van De Bruijn Retail B.V.</li>\\n      </ul>\\n      <h3>Wacht niet langer!</h3>\\n      <p>Mis deze kans niet om aanzienlijk te besparen.</p>\\n      <a href=\"https://www.debruijnretailbv.com/boeking\" class=\"cta-button\">Boek vandaag uw transport en bespaar</a>\\n      <p class=\"validity\">Deze aanbieding is geldig van 02/08/2025 tot en met 16/08/2025.</p>\\n    </div>\\n    <div class=\"signature\">\\n      <p>Hoogachtend,</p>\\n      <p><strong>Timo Geerling</strong><br>\\n      Marketing Manager</p>\\n      <p><strong>De Bruijn Retail B.V.</strong><br>\\n      Logistiekweg 112<br>\\n      1014 BV Amsterdam<br>\\n      Netherlands</p>\\n      <p>\\n        <strong>Phone:</strong> +31 20 789 4321<br>\\n        <strong>Email:</strong> warehouse@debruijn.nl<br>\\n        <strong>Web:</strong> <a href=\"https://www.debruijnretailbv.com\">www.debruijnretailbv.com</a>\\n      </p>\\n    </div>\\n  </div>\\n</body>\\n</html>\\n', 'messages': [], 'email_type': 'random', 'subject': 'Mis het niet: 15% Korting op Internationaal Transport!'}\n",
-      "--------------------------------------------------\n",
-      "Iteration 2:\n",
-      "{'recipients': ['vectrans-demo@vectrixbe.onmicrosoft.com'], 'email': '\\n<table style=\"width:100%; font-family: Arial, sans-serif;\">\\n    <tr>\\n        <td style=\"padding: 20px; background-color: #f8f8f8;\">\\n            <h1 style=\"color: #333;\">Fleet Expansion - More Capacity Available</h1>\\n            <p style=\"font-size: 16px;\">Dear Valued Customer,</p>\\n            <p style=\"font-size: 16px;\">We\\'ve added 50 new trucks to our fleet! More capacity means faster booking and better availability for your transport needs.</p>\\n            <p style=\"font-size: 16px; font-weight: bold;\">Increased transport capacity</p>\\n            <a href=\"mailto:transport@bradwick.co.uk\" style=\"background-color: #007bff; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px; margin-top: 10px; display: inline-block;\">Reserve your spot now</a>\\n            <p style=\"font-size: 14px; color: #888; margin-top: 20px;\">Valid from 02/08/2025 to 19/08/2025</p>\\n            <hr style=\"margin-top: 30px;\">\\n            <p style=\"font-size: 14px; color: #555;\">Sincerely</p>\\n            <p style=\"font-size: 14px; color: #555; font-weight: bold;\">Mr Antony Watson</p>\\n            <p style=\"font-size: 14px; color: #555;\">Business Development Manager</p>\\n            <p style=\"font-size: 14px; color: #555;\">Bradwick Materials Ltd</p>\\n            <p style=\"font-size: 14px; color: #555;\">82 Victoria Road</p>\\n            <p style=\"font-size: 14px; color: #555;\">E16 3PQ London</p>\\n            <p style=\"font-size: 14px; color: #555;\">United Kingdom</p>\\n            <p style=\"font-size: 14px; color: #555;\">Phone: +44 20 7474 8900</p>\\n            <p style=\"font-size: 14px; color: #555;\">Email: transport@bradwick.co.uk</p>\\n            <p style=\"font-size: 14px; color: #555;\">Web: www.bradwickmaterialsltd.com</p>\\n        </td>\\n    </tr>\\n</table>\\n', 'messages': [], 'email_type': 'random', 'subject': 'Fleet Expansion - More Capacity Available'}\n",
-      "--------------------------------------------------\n"
-     ]
     }
    ],
    "source": [
@@ -59,8 +47,8 @@
     "config = {\"configurable\": {\"sender\": os.environ[\"SENDER_EMAIL\"]}}\n",
     "\n",
     "\n",
-    "for i in range(2):\n",
-    "    response = await graph.ainvoke({'recipients': ['vectrans-demo@vectrixbe.onmicrosoft.com'], 'email_type': 'random'}, config=config)\n",
+    "for i in range(10):\n",
+    "    response = await graph.ainvoke({'recipients': ['vectrans-demo@vectrixbe.onmicrosoft.com'], 'email_type': 'order'}, config=config)\n",
     "    print(f\"Iteration {i+1}:\")\n",
     "    print(response)\n",
     "    print(\"-\" * 50)"
